# g2opy

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  setup.py
cmake_modules/: FindBLAS.cmake  FindCSparse.cmake
contrib/: CMakeLists.txt
contrib/sba_addons/: types_stereo_sba.hpp
examples/: ba_anchored_inverse_depth_demo.py  ba_demo.py  gicp_demo.py  gicp_sba_demo.py  sba_demo.py  sba_demo2.py  simple_optimize.py
src/: g2o.cpp
src/contrib/estimate_propagator/: SmoothEstimatePropagator.hpp
src/core/: base_edge.h  base_multi_edge.h  base_vertex.h  hyper_graph.h  sparse_block_matrix.h
src/types/icp/: types_icp.h
src/types/sba/: types_sba.h  types_six_dof_expmap.h
src/types/sclam2d/: odometry_measurement.h  types_sclam2d.h  vertex_odom_differential_params.h
src/types/sim3/: sim3.h  types_seven_dof_expmap.h
src/types/slam2d/: edge_pointxy.h  edge_se2.h  edge_se2_pointxy.h  se2.h  types_slam2d.h  vertex_point_xy.h
src/types/slam3d/: edge_pointxyz.h  edge_se3.h  edge_se3_pointxyz.h  se3quat.h  types_slam3d.h  vertex_pointxyz.h  vertex_se3.h
